2009-06-26  Florent Lamiraux  <florent@laas.fr>

	Remove unitTesting.
	* CMakeLists.txt,
	* unitTesting/CMakeLists.txt: Remove.
	* unitTesting/MatrixAbstractLayerTest.cpp: Remove.
	* unitTesting/MatrixAbstractLayerTest.h: Remove.
	* unitTesting/TimeUtilsWindows.cpp: Remove.
	* unitTesting/TimeUtilsWindows.h: Remove.
	* unitTesting/main.cpp: Remove.
	* unitTesting/performance.cpp: Remove.
	* unitTesting/tboost.cpp: Remove.
	* unitTesting/testdampedinverse.cpp: Remove.
	* unitTesting/testoptimizedJpJt.cpp: Remove.
	* unitTesting/testpseudoinverse.cpp: Remove.
	* unitTesting/tsvd.cpp: Remove.
	* unitTesting/tsvddamped.cpp: Remove.
	* unitTesting/tsvdpseudoinverse.cpp: Remove.
	UnitTesting have been moved to StackOfTasks.

2009-06-09 Nicolas Mansard <nmansard@laas.fr>

	Release 1.7.4 for StackOfTasks release 1.0.1.
	
2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	CMakeLists.txt : Removed access to Dart server.
	* unitTesting/CMakeLists.txt: .

2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Removing some useless characters.
	* include/MatrixAbstractLayer/MatrixAbstractLayerMatrix3x3JrlMath.h: .

MatrixAbstractLayer 1.7.3 released March 13th, 2009

	53. Adding unitary tests for pseudo-inverse computation.
	52. Removed the lapack bindings introducing a bug in the pseudo-inverse.

MatrixAbstractLayer 1.7.2 released January 29nd, 2009

	51. Added dependency to jrlMathTools even if t3d is chosen.
	
MatrixAbstractLayer 1.7 released January 22nd, 2009

	50. Added test for small matrix and choice between T3D and jrlMathTools
	    through command line options

MatrixAbstractLayer 1.6 released January 22nd, 2009

	49. Final version of the SVD specialized matrix.
	48. Added damped inverse optimized code.
	47. Added Maal2:matrixSVD for optimization of the SVD/pseudoinverse calls.
	46. Modified Maal2::matrix to add the virtual property to the svd-based functions.
	45. Modified Makefile to add the tsvd test.