@@ -1,5 +1,11 @@
 2009-06-26  Florent Lamiraux  <florent@laas.fr>
 
+	Do not install mal2 headers anymore.
+	* include/CMakeLists.txt: these headers have been moved
+	to StackOfTasks.
+
+2009-06-26  Florent Lamiraux  <florent@laas.fr>
+
 	Remove unitTesting.
 	* CMakeLists.txt,
 	* unitTesting/CMakeLists.txt: Remove.
